--- a/tps/tp3/tp3.tex
+++ b/tps/tp3/tp3.tex
@@ -46,6 +46,8 @@ Utilizar el dataset EuRoC\footnote{\url{https://projects.asl.ethz.ch/datasets/do
         \item ROS2 camera\_calibration:  \url{https://navigation.ros.org/tutorials/docs/camera_calibration.html}
         \item OpenCV tutorial\_camera\_calibration:\\ \url{https://docs.opencv.org/4.x/d4/d94/tutorial_camera_calibration.html}
         \item Kalibr: \url{https://github.com/ethz-asl/kalibr/wiki/ROS2-Calibration-Using-Kalibr}
+        \item Basal Calibration: \url{https://github.com/VladyslavUsenko/basalt/blob/master/doc/Calibration.md}
+        \item BoofCV: \url{https://boofcv.org/index.php?title=Tutorial_Camera_Calibration}
         \item Camera Calibration Toolbox for Matlab:\\ \url{https://www.cs.toronto.edu/pub/psala/VM/cameraCalibrationExample.html}
     \end{itemize}
 \end{nota}
