Slides 05: minor changes

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -937,7 +937,7 @@
     \begin{itemize}
         \item Ambas matrizes tienen rango 2
         \item La matríz esencial tiene 5 DoF
-        \item La matríz fundamental tiene 7 DoF (ya que tience información sobre los parámetros de calibración)
+        \item La matríz fundamental tiene 7 DoF (ya que contiene información sobre los parámetros de calibración)
         \item Las restricciones coplanares más pares de correspondencias nos permiten encontrar dichas matrices por medio de la solución de un sistema líneal utilizando descomposición SVD (\emph{Singular Value Decomposition}).
         \item La matríz fundamental puede ser hallada con \emph{8-Point Algorithm}
         \item La matríz esencial puede ser hallada con \emph{5-Point Algorithm}
