Slides 05: Add sptam vido

--- a/teoricas/teorica_03/src/event_camera.tex
+++ b/teoricas/teorica_03/src/event_camera.tex
@@ -2,7 +2,7 @@
 	\frametitle{Cámara basada en eventos}
 	
 	\begin{center}
-		\movie[loop]{\includegraphics[width=0.9\columnwidth]{images/event_camera.png}}{videos/event_camera.mp4}
+		\movie[autostart,loop,poster]{\includegraphics[width=0.9\columnwidth]{images/event_camera.png}}{videos/event_camera.mp4}
 	\end{center}
 	
 \end{frame}
