--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -3,8 +3,9 @@
     
     Las cámaras pueden ser utilizadas para realizar una reconstrucción del entorno y estimar la localización de un robot. Visual Odometry / Visual SLAM.
     
-    \TODO{Agregar imagen o video de Visual SLAM o de Visual Odometry}
-    
+    \begin{center}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.75\columnwidth]{images/sptam_kitti_lc_trimmed_video.jpg}}{videos/sptam_kitti_lc_trimmed.mp4}
+    \end{center}
     
 \end{frame}
 
