--- a/teoricas/teorica_04/src/ros.tex
+++ b/teoricas/teorica_04/src/ros.tex
@@ -193,7 +193,7 @@ ros2 run turtlesim turtle_teleop_key --ros-args --remap turtle1/cmd_vel:=turtle2
     \frametitle{ROS Graph}
     \scriptsize
    	\begin{center}
-        \movie[loop]{\includegraphics[width=0.5\columnwidth]{images/ros2_nodes_video.jpg}}{videos/ros2_nodes.mp4}
+        \movie[autostart,loop,poster]{\includegraphics[width=0.5\columnwidth]{images/ros2_nodes_video.jpg}}{videos/ros2_nodes.mp4}
     \end{center}
     
     \begin{itemize}
