Slides 05: improve tangential distortion image

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -805,16 +805,9 @@
 \begin{frame}
     \frametitle{Distorción Tangencial}
     \footnotesize
-    \begin{figure}[!h]
-        \subfloat[]
-        {
-            \includegraphics[width=0.3\columnwidth]{images/camera/tangential_distortion2.pdf}
-        }\\
-        \subfloat[]
-        {
-            \includegraphics[width=0.3\columnwidth]{images/camera/tangential_distortion.pdf}
-        }
-    \end{figure}
+    \begin{center}
+        \includegraphics[width=0.4\columnwidth]{images/camera/tangential_distortion2.pdf}\\
+    \end{center}
     
 \end{frame}
 
