Slides 05: Add projection_matrix image

--- a/teoricas/teorica_05/src/computer_vision.tex
+++ b/teoricas/teorica_05/src/computer_vision.tex
@@ -606,9 +606,14 @@
     
     La matriz de proyección para el caso en que la cámara pueda ubicarse fuera del origen del mundo entonces queda:
     
-       \begin{equation*}
-       \projectionMatrix=\intrinsicMatrix\begin{bmatrix}\rotationCoord{\cameraCoordSystem}{\worldCoordSystem} & \translationCoord{\cameraCoordSystem}{\worldCoordSystem}\end{bmatrix}
-    \end{equation*}
+    % \begin{equation*}
+    %    \projectionMatrix=\intrinsicMatrix\begin{bmatrix}\rotationCoord{\cameraCoordSystem}{\worldCoordSystem} & \translationCoord{\cameraCoordSystem}{\worldCoordSystem}\end{bmatrix}
+    % \end{equation*}
+
+    \begin{center}
+        \includegraphics[width=0.4\columnwidth]{images/camera/projection_matrix.pdf}
+    \end{center}
+
 \end{frame}
 
 \begin{frame}
